# django_social_app_login

./: README.md  pyproject.toml
social_app/: db.sqlite3
social_app/core/templates/: base.html
social_app/social_app/: settings.py  urls.py
