[tool.poetry]
name = "django_social_app"
version = "0.1.0"
description = ""
authors = ["lifnaja <alif23669@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"
social-auth-app-django = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
